chat-enhance: fix conflict with D&D5E Dark Mode
fix #96

--- a/df-chat-enhance/css/privacy-button.css
+++ b/df-chat-enhance/css/privacy-button.css
@@ -13,7 +13,6 @@
 }
 
 #dfcp-rt-buttons button i {
-	color: black;
 	width: 20px;
 	height: 20px;
 	margin: auto;
